--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalkulator Napiwków</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    
+    <form id="form">
+    <label for="rachunek" style="margin-left: 1px;">Wpisz kwotę rachunku:</label>
+    <input type="number" id="rachunek" name="rachunek" step="0.01" required/>
+    <br>
+
+    <label for="napiwek" style="margin-left: 1px;">Wpisz procent napiwku:</label>
+    <input type="number" id="napiwek" name="napiwek" step="0.01" required/>
+
+    <input type="submit" value="Wyliczenie" id="wyliczenie">
+    </form>
+
+    <div id="wynik"></div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
