--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <input type="number" id="rachunek" name="rachunek" step="0.01" required/>
     <br>
 
-    <label for="napiwek" style="margin-left: 1px;">Wpisz procent napiwku:</label>
-    <input type="number" id="napiwek" name="napiwek" step="0.01" required/>
+    <label for="napiwek" style="margin-left: 1px;" id="wartosc">Podaj procent napiwku: </label>
+    <input type="range" id="napiwek" name="napiwek" min="0" max="100" required/>
 
     <input type="submit" value="Wyliczenie" id="wyliczenie">
     </form>
