--- a/index.html
+++ b/index.html
@@ -4,22 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalkulator Napiwków</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="output.css" />
   </head>
-  <body>
-    
-    <form id="form">
-    <label for="rachunek" style="margin-left: 1px;">Wpisz kwotę rachunku:</label>
-    <input type="number" id="rachunek" name="rachunek" step="0.01" required/>
-    <br>
+  <body
+    class="text-center sm:text-left w-screen h-auto md:h-screen flex justify-center align-middle bg-cyan-100/[90.57%]"
+  >
+    <div class="bg-white text-center m-auto pt-15 pl-20 pr-20 pb-15 h-100">
+      <form id="form">
+        <label for="rachunek" style="margin-left: 1px" class="text-cyan-900 text-center block"
+          >Wpisz kwotę rachunku:</label
+        >
+        <input
+          type="number"
+          id="rachunek"
+          name="rachunek"
+          step="0.01"
+          placeholder="$"
+          class="placeholder:italic bg-cyan-50/[90.57%] rounded-md mt-4 hover:"
+          required
+        />
 
-    <label for="napiwek" style="margin-left: 1px;" id="wartosc">Podaj procent napiwku: </label>
-    <input type="range" id="napiwek" name="napiwek" min="0" max="100" required/>
+        <p class="block pt-4">Select Tip %</p>
+        <div class="grid grid-cols-3 grid-rows-2 gap-2 pt-4">
+        <button class="p-2 bg-cyan-950 text-white rounded-md">5%</button>
+        <button class="p-2 bg-cyan-950 text-white rounded-md">10%</button>
+        <button class="p-2 bg-cyan-950 text-white rounded-md">15%</button>
+        <button class="p-2 bg-cyan-950 text-white rounded-md">25%</button>
+        <button class="p-2 bg-cyan-950 text-white rounded-md">50%</button>
+        <input type="number" placeholder="Custom" class="p-2">
+        </div>
 
-    <input type="submit" value="Wyliczenie" id="wyliczenie">
-    </form>
+        <label
+          for="napiwek"
+          style="margin-left: 1px"
+          id="wartosc"
+          class="text-cyan-900 block"
+          >Podaj procent napiwku:
+        </label>
+        <input
+          type="range"
+          id="napiwek"
+          name="napiwek"
+          min="0"
+          max="100"
+          value="0"
+          required
+        />
 
-    <div id="wynik"></div>
+        <input type="submit" value="Wyliczenie" id="wyliczenie" class="block bg-cyan-700 p-3 text-white rounded-md"/>
+      </form>
+
+      <div id="wynik"></div>
+    </div>
 
     <script src="script.js"></script>
   </body>
