--- a/index.html
+++ b/index.html
@@ -3,60 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kalkulator Napiwków</title>
-    <link rel="stylesheet" href="output.css" />
+    <title>Kalkulator Napiwków - Splitter</title>
+    <link href="output.css" rel="stylesheet">
   </head>
-  <body
-    class="text-center sm:text-left w-screen h-auto md:h-screen flex justify-center align-middle bg-cyan-100/[90.57%]"
-  >
-    <div class="bg-white text-center m-auto pt-15 pl-20 pr-20 pb-15 h-100">
-      <form id="form">
-        <label for="rachunek" style="margin-left: 1px" class="text-cyan-900 text-center block"
-          >Wpisz kwotę rachunku:</label
-        >
+  <body class="bg-cyan-100 flex justify-center items-center min-h-screen font-mono">
+
+    <div class="bg-white shadow-2xl rounded-2xl p-8 md:p-10 flex flex-col md:flex-row gap-10 max-w-4xl w-full">
+
+      <div class="flex-1">
+        <label for="bill" class="block text-cyan-900 text-sm mb-2">Bill</label>
         <input
           type="number"
-          id="rachunek"
-          name="rachunek"
-          step="0.01"
-          placeholder="$"
-          class="placeholder:italic bg-cyan-50/[90.57%] rounded-md mt-4 hover:"
-          required
+          id="bill"
+          placeholder="0"
+          class="w-full bg-cyan-50 rounded-md p-2 text-right text-cyan-900 font-bold focus:outline-none"
         />
 
-        <p class="block pt-4">Select Tip %</p>
-        <div class="grid grid-cols-3 grid-rows-2 gap-2 pt-4">
-        <button class="p-2 bg-cyan-950 text-white rounded-md">5%</button>
-        <button class="p-2 bg-cyan-950 text-white rounded-md">10%</button>
-        <button class="p-2 bg-cyan-950 text-white rounded-md">15%</button>
-        <button class="p-2 bg-cyan-950 text-white rounded-md">25%</button>
-        <button class="p-2 bg-cyan-950 text-white rounded-md">50%</button>
-        <input type="number" placeholder="Custom" class="p-2">
+        <p class="text-cyan-900 text-sm mt-6 mb-2">Select Tip %</p>
+        <div class="grid grid-cols-3 gap-3">
+          <button class="bg-cyan-950 text-white font-bold py-2 rounded-md hover:bg-cyan-700">5%</button>
+          <button class="bg-cyan-950 text-white font-bold py-2 rounded-md hover:bg-cyan-700">10%</button>
+          <button class="bg-cyan-950 text-white font-bold py-2 rounded-md hover:bg-cyan-700">15%</button>
+          <button class="bg-cyan-950 text-white font-bold py-2 rounded-md hover:bg-cyan-700">25%</button>
+          <button class="bg-cyan-950 text-white font-bold py-2 rounded-md hover:bg-cyan-700">50%</button>
+          <input
+            type="number"
+            placeholder="Custom"
+            class="bg-cyan-50 text-center text-cyan-900 rounded-md font-bold focus:outline-none w-10"
+          />
         </div>
 
-        <label
-          for="napiwek"
-          style="margin-left: 1px"
-          id="wartosc"
-          class="text-cyan-900 block"
-          >Podaj procent napiwku:
-        </label>
-        <input
-          type="range"
-          id="napiwek"
-          name="napiwek"
-          min="0"
-          max="100"
-          value="0"
-          required
-        />
+        <p class="text-cyan-900 text-sm mt-6 mb-2">Number of People</p>
+        <div class="flex items-center bg-cyan-50 rounded-md p-2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-cyan-900" viewBox="0 0 20 20" fill="currentColor">
+          </svg>
+          <input
+            type="number"
+            id="people"
+            placeholder="0"
+            class="w-full text-right bg-transparent text-cyan-900 font-bold focus:outline-none"
+          />
+        </div>
+      </div>
 
-        <input type="submit" value="Wyliczenie" id="wyliczenie" class="block bg-cyan-700 p-3 text-white rounded-md"/>
-      </form>
 
-      <div id="wynik"></div>
+      <div class="flex-1 bg-cyan-950 text-white rounded-3xl p-8 flex flex-col justify-between">
+        <div>
+          <div class="flex justify-between items-center mb-6">
+            <div>
+              <p class="text-sm">Tip Amount</p>
+              <p class="text-xs text-cyan-400">/ person</p>
+            </div>
+          </div>
+
+          <div class="flex justify-between items-center">
+            <div>
+              <p class="text-sm">Total</p>
+              <p class="text-xs text-cyan-400">/ person</p>
+            </div>
+          </div>
+        </div>
+
+        <button class="bg-cyan-400 text-cyan-950 font-bold py-2 rounded-md mt-8 hover:bg-cyan-500">
+          RESET
+        </button>
+      </div>
     </div>
 
-    <script src="script.js"></script>
   </body>
 </html>
